--- a/app/views/gallery_widget/thumbnail.html.erb
+++ b/app/views/gallery_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
 <%= scrivito_thumbnail t('scrivito_gallery_widget.thumbnail.title', default: 'Gallery'), image_tag("widgets/scrivito_gallery_widget.png") do %>
-  <%= t('scrivito_gallery_widget.thumbnail.description', default: 'Insert an easy gallery to your page.') %>
+  <%= t('scrivito_gallery_widget.thumbnail.description', default: 'Insert an easy gallery to your page') %>
 <% end %>
